MirandaParser.py
# $ANTLR 3.4 grammars/Miranda.g 2011-12-27 22:41:32

import sys
from antlr3 import *
from antlr3.compat import set, frozenset

from antlr3.tree import *


        
from ast import mk_ap_chain, IntNode, FloatNode, IdentifierNode, CharNode, AddNode, MinNode, MulNode, DivNode, OrNode, AndNode
from miranda_ast import *



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
EOF=-1
ADD=4
ALPHANUMERIC=5
AND=6
BODY=7
CHAR=8
CHAR_TYPE=9
COLON=10
COMMA=11
COMMENT=12
CONCAT=13
DEDENT=14
DEFINITION=15
DIV=16
DOT=17
DOUBLE_QUOTE=18
EQ=19
EXP=20
FALSE=21
FLOAT=22
GENERIC=23
GT=24
GTE=25
ID=26
IDIV=27
INT=28
IS=29
LBRACKET=30
LIST=31
LPAREN=32
LT=33
LTE=34
MIN=35
MOD=36
MUL=37
NEQ=38
NOT=39
NUMERIC=40
NUM_TYPE=41
OR=42
OTHERWISE=43
PROGRAM=44
RBRACKET=45
RPAREN=46
SECTION=47
SINGLE_QUOTE=48
STARS=49
STRING=50
SUBTRACT=51
TRUE=52
TUPLE=53
TYPE=54
TYPE_IS=55
WHERE=56
WHITESPACE=57

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>",
    "ADD", "ALPHANUMERIC", "AND", "BODY", "CHAR", "CHAR_TYPE", "COLON", 
    "COMMA", "COMMENT", "CONCAT", "DEDENT", "DEFINITION", "DIV", "DOT", 
    "DOUBLE_QUOTE", "EQ", "EXP", "FALSE", "FLOAT", "GENERIC", "GT", "GTE", 
    "ID", "IDIV", "INT", "IS", "LBRACKET", "LIST", "LPAREN", "LT", "LTE", 
    "MIN", "MOD", "MUL", "NEQ", "NOT", "NUMERIC", "NUM_TYPE", "OR", "OTHERWISE", 
    "PROGRAM", "RBRACKET", "RPAREN", "SECTION", "SINGLE_QUOTE", "STARS", 
    "STRING", "SUBTRACT", "TRUE", "TUPLE", "TYPE", "TYPE_IS", "WHERE", "WHITESPACE"
]




class MirandaParser(Parser):
    grammarFileName = "grammars/Miranda.g"
    api_version = 1
    tokenNames = tokenNames

    def __init__(self, input, state=None, *args, **kwargs):
        if state is None:
            state = RecognizerSharedState()

        super(MirandaParser, self).__init__(input, state, *args, **kwargs)

        self._state.ruleMemo = {}




        self.delegates = []

	self._adaptor = None
	self.adaptor = CommonTreeAdaptor()



    def getTreeAdaptor(self):
        return self._adaptor

    def setTreeAdaptor(self, adaptor):
        self._adaptor = adaptor

    adaptor = property(getTreeAdaptor, setTreeAdaptor)


    class program_return(ParserRuleReturnScope):
        def __init__(self):
            super(MirandaParser.program_return, self).__init__()

            self.tree = None





    # $ANTLR start "program"
    # grammars/Miranda.g:111:1: program : ( ( typedef ) DEDENT )* expression EOF -> ^( PROGRAM ( typedef )* expression ) ;
    def program(self, ):
        retval = self.program_return()
        retval.start = self.input.LT(1)

        program_StartIndex = self.input.index()

        root_0 = None

        DEDENT2 = None
        EOF4 = None
        typedef1 = None

        expression3 = None


        DEDENT2_tree = None
        EOF4_tree = None
        stream_DEDENT = RewriteRuleTokenStream(self._adaptor, "token DEDENT")
        stream_EOF = RewriteRuleTokenStream(self._adaptor, "token EOF")
        stream_expression = RewriteRuleSubtreeStream(self._adaptor, "rule expression")
        stream_typedef = RewriteRuleSubtreeStream(self._adaptor, "rule typedef")
        success = False

        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 1):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval


                # grammars/Miranda.g:111:8: ( ( ( typedef ) DEDENT )* expression EOF -> ^( PROGRAM ( typedef )* expression ) )
                # grammars/Miranda.g:112:3: ( ( typedef ) DEDENT )* expression EOF
                pass 
                # grammars/Miranda.g:112:3: ( ( typedef ) DEDENT )*
                while True: #loop1
                    alt1 = 2
                    LA1_0 = self.input.LA(1)

                    if (LA1_0 == ID) :
                        LA1_1 = self.input.LA(2)

                        if (LA1_1 == STARS) :
                            LA1_3 = self.input.LA(3)

                            if (LA1_3 == STARS or LA1_3 == TYPE_IS) :
                                alt1 = 1


                        elif (LA1_1 == TYPE_IS) :
                            alt1 = 1




                    if alt1 == 1:
                        # grammars/Miranda.g:112:4: ( typedef ) DEDENT
                        pass 
                        # grammars/Miranda.g:112:4: ( typedef )
                        # grammars/Miranda.g:112:5: typedef
                        pass 
                        self._state.following.append(self.FOLLOW_typedef_in_program651)
                        typedef1 = self.typedef()

                        self._state.following.pop()
                        if self._state.backtracking == 0:
                            stream_typedef.add(typedef1.tree)





                        DEDENT2 = self.match(self.input, DEDENT, self.FOLLOW_DEDENT_in_program654) 
                        if self._state.backtracking == 0:
                            stream_DEDENT.add(DEDENT2)



                    else:
                        break #loop1


                self._state.following.append(self.FOLLOW_expression_in_program658)
                expression3 = self.expression()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    stream_expression.add(expression3.tree)


                EOF4 = self.match(self.input, EOF, self.FOLLOW_EOF_in_program660) 
                if self._state.backtracking == 0:
                    stream_EOF.add(EOF4)


                # AST Rewrite
                # elements: expression, typedef
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 
                if self._state.backtracking == 0:
                    retval.tree = root_0
                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 113:3: -> ^( PROGRAM ( typedef )* expression )
                    # grammars/Miranda.g:113:6: ^( PROGRAM ( typedef )* expression )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(
                    ProgramNode(PROGRAM)
                    , root_1)

                    # grammars/Miranda.g:113:29: ( typedef )*
                    while stream_typedef.hasNext():
                        self._adaptor.addChild(root_1, stream_typedef.nextTree())


                    stream_typedef.reset();

                    self._adaptor.addChild(root_1, stream_expression.nextTree())

                    self._adaptor.addChild(root_0, root_1)




                    retval.tree = root_0





                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



                success = True

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            if self._state.backtracking > 0:
                self.memoize(self.input, 1, program_StartIndex, success)


            pass
        return retval

    # $ANTLR end "program"


    class definition_return(ParserRuleReturnScope):
        def __init__(self):
            super(MirandaParser.definition_return, self).__init__()

            self.tree = None





    # $ANTLR start "definition"
    # grammars/Miranda.g:116:1: definition : ID ( parameter )* ( body )* -> ^( DEFINITION ID ( parameter )* ( body )* ) ;
    def definition(self, ):
        retval = self.definition_return()
        retval.start = self.input.LT(1)

        definition_StartIndex = self.input.index()

        root_0 = None

        ID5 = None
        parameter6 = None

        body7 = None


        ID5_tree = None
        stream_ID = RewriteRuleTokenStream(self._adaptor, "token ID")
        stream_body = RewriteRuleSubtreeStream(self._adaptor, "rule body")
        stream_parameter = RewriteRuleSubtreeStream(self._adaptor, "rule parameter")
        success = False

        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 2):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval


                # grammars/Miranda.g:118:3: ( ID ( parameter )* ( body )* -> ^( DEFINITION ID ( parameter )* ( body )* ) )
                # grammars/Miranda.g:118:5: ID ( parameter )* ( body )*
                pass 
                ID5 = self.match(self.input, ID, self.FOLLOW_ID_in_definition690) 
                if self._state.backtracking == 0:
                    stream_ID.add(ID5)


                # grammars/Miranda.g:118:8: ( parameter )*
                while True: #loop2
                    alt2 = 2
                    LA2_0 = self.input.LA(1)

                    if ((FALSE <= LA2_0 <= FLOAT) or LA2_0 == ID or LA2_0 == INT or LA2_0 == LBRACKET or LA2_0 == LPAREN or LA2_0 == TRUE) :
                        alt2 = 1


                    if alt2 == 1:
                        # grammars/Miranda.g:118:8: parameter
                        pass 
                        self._state.following.append(self.FOLLOW_parameter_in_definition692)
                        parameter6 = self.parameter()

                        self._state.following.pop()
                        if self._state.backtracking == 0:
                            stream_parameter.add(parameter6.tree)



                    else:
                        break #loop2


                # grammars/Miranda.g:118:19: ( body )*
                while True: #loop3
                    alt3 = 2
                    LA3_0 = self.input.LA(1)

                    if (LA3_0 == IS) :
                        LA3_2 = self.input.LA(2)

                        if (self.synpred3_Miranda()) :
                            alt3 = 1




                    if alt3 == 1:
                        # grammars/Miranda.g:118:19: body
                        pass 
                        self._state.following.append(self.FOLLOW_body_in_definition695)
                        body7 = self.body()

                        self._state.following.pop()
                        if self._state.backtracking == 0:
                            stream_body.add(body7.tree)



                    else:
                        break #loop3


                # AST Rewrite
                # elements: ID, body, parameter
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 
                if self._state.backtracking == 0:
                    retval.tree = root_0
                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 119:5: -> ^( DEFINITION ID ( parameter )* ( body )* )
                    # grammars/Miranda.g:119:8: ^( DEFINITION ID ( parameter )* ( body )* )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(
                    MirandaDefinitionNode(DEFINITION)
                    , root_1)

                    self._adaptor.addChild(root_1, 
                    stream_ID.nextNode()
                    )

                    # grammars/Miranda.g:119:47: ( parameter )*
                    while stream_parameter.hasNext():
                        self._adaptor.addChild(root_1, stream_parameter.nextTree())


                    stream_parameter.reset();

                    # grammars/Miranda.g:119:58: ( body )*
                    while stream_body.hasNext():
                        self._adaptor.addChild(root_1, stream_body.nextTree())


                    stream_body.reset();

                    self._adaptor.addChild(root_0, root_1)




                    retval.tree = root_0





                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



                success = True

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            if self._state.backtracking > 0:
                self.memoize(self.input, 2, definition_StartIndex, success)


            pass
        return retval

    # $ANTLR end "definition"


    class typedef_return(ParserRuleReturnScope):
        def __init__(self):
            super(MirandaParser.typedef_return, self).__init__()

            self.tree = None





    # $ANTLR start "typedef"
    # grammars/Miranda.g:123:1: typedef : ID ( STARS )* TYPE_IS -> ^( TYPE ^( ID ( STARS )* ) ) ;
    def typedef(self, ):
        retval = self.typedef_return()
        retval.start = self.input.LT(1)

        typedef_StartIndex = self.input.index()

        root_0 = None

        ID8 = None
        STARS9 = None
        TYPE_IS10 = None

        ID8_tree = None
        STARS9_tree = None
        TYPE_IS10_tree = None
        stream_STARS = RewriteRuleTokenStream(self._adaptor, "token STARS")
        stream_TYPE_IS = RewriteRuleTokenStream(self._adaptor, "token TYPE_IS")
        stream_ID = RewriteRuleTokenStream(self._adaptor, "token ID")

        success = False

        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 3):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval


                # grammars/Miranda.g:124:3: ( ID ( STARS )* TYPE_IS -> ^( TYPE ^( ID ( STARS )* ) ) )
                # grammars/Miranda.g:124:5: ID ( STARS )* TYPE_IS
                pass 
                ID8 = self.match(self.input, ID, self.FOLLOW_ID_in_typedef731) 
                if self._state.backtracking == 0:
                    stream_ID.add(ID8)


                # grammars/Miranda.g:124:8: ( STARS )*
                while True: #loop4
                    alt4 = 2
                    LA4_0 = self.input.LA(1)

                    if (LA4_0 == STARS) :
                        alt4 = 1


                    if alt4 == 1:
                        # grammars/Miranda.g:124:8: STARS
                        pass 
                        STARS9 = self.match(self.input, STARS, self.FOLLOW_STARS_in_typedef733) 
                        if self._state.backtracking == 0:
                            stream_STARS.add(STARS9)



                    else:
                        break #loop4


                TYPE_IS10 = self.match(self.input, TYPE_IS, self.FOLLOW_TYPE_IS_in_typedef736) 
                if self._state.backtracking == 0:
                    stream_TYPE_IS.add(TYPE_IS10)


                # AST Rewrite
                # elements: STARS, ID
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 
                if self._state.backtracking == 0:
                    retval.tree = root_0
                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 125:5: -> ^( TYPE ^( ID ( STARS )* ) )
                    # grammars/Miranda.g:125:8: ^( TYPE ^( ID ( STARS )* ) )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(
                    self._adaptor.createFromType(TYPE, "TYPE")
                    , root_1)

                    # grammars/Miranda.g:125:15: ^( ID ( STARS )* )
                    root_2 = self._adaptor.nil()
                    root_2 = self._adaptor.becomeRoot(
                    stream_ID.nextNode()
                    , root_2)

                    # grammars/Miranda.g:125:20: ( STARS )*
                    while stream_STARS.hasNext():
                        self._adaptor.addChild(root_2, 
                        stream_STARS.nextNode()
                        )


                    stream_STARS.reset();

                    self._adaptor.addChild(root_1, root_2)

                    self._adaptor.addChild(root_0, root_1)




                    retval.tree = root_0





                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



                success = True

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            if self._state.backtracking > 0:
                self.memoize(self.input, 3, typedef_StartIndex, success)


            pass
        return retval

    # $ANTLR end "typedef"


    class body_return(ParserRuleReturnScope):
        def __init__(self):
            super(MirandaParser.body_return, self).__init__()

            self.tree = None





    # $ANTLR start "body"
    # grammars/Miranda.g:130:1: body : IS expression ( guard )? ( where )? -> ^( BODY expression ( guard )? ( where )? ) ;
    def body(self, ):
        retval = self.body_return()
        retval.start = self.input.LT(1)

        body_StartIndex = self.input.index()

        root_0 = None

        IS11 = None
        expression12 = None

        guard13 = None

        where14 = None


        IS11_tree = None
        stream_IS = RewriteRuleTokenStream(self._adaptor, "token IS")
        stream_expression = RewriteRuleSubtreeStream(self._adaptor, "rule expression")
        stream_guard = RewriteRuleSubtreeStream(self._adaptor, "rule guard")
        stream_where = RewriteRuleSubtreeStream(self._adaptor, "rule where")
        success = False

        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 4):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval


                # grammars/Miranda.g:130:5: ( IS expression ( guard )? ( where )? -> ^( BODY expression ( guard )? ( where )? ) )
                # grammars/Miranda.g:130:7: IS expression ( guard )? ( where )?
                pass 
                IS11 = self.match(self.input, IS, self.FOLLOW_IS_in_body769) 
                if self._state.backtracking == 0:
                    stream_IS.add(IS11)


                self._state.following.append(self.FOLLOW_expression_in_body771)
                expression12 = self.expression()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    stream_expression.add(expression12.tree)


                # grammars/Miranda.g:130:21: ( guard )?
                alt5 = 2
                LA5_0 = self.input.LA(1)

                if (LA5_0 == COMMA) :
                    alt5 = 1
                if alt5 == 1:
                    # grammars/Miranda.g:130:21: guard
                    pass 
                    self._state.following.append(self.FOLLOW_guard_in_body773)
                    guard13 = self.guard()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_guard.add(guard13.tree)





                # grammars/Miranda.g:130:28: ( where )?
                alt6 = 2
                LA6_0 = self.input.LA(1)

                if (LA6_0 == WHERE) :
                    alt6 = 1
                if alt6 == 1:
                    # grammars/Miranda.g:130:28: where
                    pass 
                    self._state.following.append(self.FOLLOW_where_in_body776)
                    where14 = self.where()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_where.add(where14.tree)





                # AST Rewrite
                # elements: where, expression, guard
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 
                if self._state.backtracking == 0:
                    retval.tree = root_0
                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 131:7: -> ^( BODY expression ( guard )? ( where )? )
                    # grammars/Miranda.g:131:10: ^( BODY expression ( guard )? ( where )? )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(
                    self._adaptor.createFromType(BODY, "BODY")
                    , root_1)

                    self._adaptor.addChild(root_1, stream_expression.nextTree())

                    # grammars/Miranda.g:131:28: ( guard )?
                    if stream_guard.hasNext():
                        self._adaptor.addChild(root_1, stream_guard.nextTree())


                    stream_guard.reset();

                    # grammars/Miranda.g:131:35: ( where )?
                    if stream_where.hasNext():
                        self._adaptor.addChild(root_1, stream_where.nextTree())


                    stream_where.reset();

                    self._adaptor.addChild(root_0, root_1)




                    retval.tree = root_0





                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



                success = True

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            if self._state.backtracking > 0:
                self.memoize(self.input, 4, body_StartIndex, success)


            pass
        return retval

    # $ANTLR end "body"


    class guard_return(ParserRuleReturnScope):
        def __init__(self):
            super(MirandaParser.guard_return, self).__init__()

            self.tree = None





    # $ANTLR start "guard"
    # grammars/Miranda.g:134:1: guard : COMMA ( expression | OTHERWISE ) ;
    def guard(self, ):
        retval = self.guard_return()
        retval.start = self.input.LT(1)

        guard_StartIndex = self.input.index()

        root_0 = None

        COMMA15 = None
        OTHERWISE17 = None
        expression16 = None


        COMMA15_tree = None
        OTHERWISE17_tree = None

        success = False

        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 5):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval


                # grammars/Miranda.g:134:6: ( COMMA ( expression | OTHERWISE ) )
                # grammars/Miranda.g:134:8: COMMA ( expression | OTHERWISE )
                pass 
                root_0 = self._adaptor.nil()


                COMMA15 = self.match(self.input, COMMA, self.FOLLOW_COMMA_in_guard805)
                if self._state.backtracking == 0:
                    COMMA15_tree = self._adaptor.createWithPayload(COMMA15)
                    self._adaptor.addChild(root_0, COMMA15_tree)



                # grammars/Miranda.g:134:14: ( expression | OTHERWISE )
                alt7 = 2
                LA7_0 = self.input.LA(1)

                if (LA7_0 == CHAR or (FALSE <= LA7_0 <= FLOAT) or LA7_0 == ID or LA7_0 == INT or LA7_0 == LBRACKET or LA7_0 == LPAREN or LA7_0 == NOT or LA7_0 == STRING or LA7_0 == TRUE) :
                    alt7 = 1
                elif (LA7_0 == OTHERWISE) :
                    alt7 = 2
                else:
                    if self._state.backtracking > 0:
                        raise BacktrackingFailed


                    nvae = NoViableAltException("", 7, 0, self.input)

                    raise nvae


                if alt7 == 1:
                    # grammars/Miranda.g:134:15: expression
                    pass 
                    self._state.following.append(self.FOLLOW_expression_in_guard808)
                    expression16 = self.expression()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, expression16.tree)



                elif alt7 == 2:
                    # grammars/Miranda.g:134:26: OTHERWISE
                    pass 
                    OTHERWISE17 = self.match(self.input, OTHERWISE, self.FOLLOW_OTHERWISE_in_guard810)
                    if self._state.backtracking == 0:
                        OTHERWISE17_tree = self._adaptor.createWithPayload(OTHERWISE17)
                        self._adaptor.addChild(root_0, OTHERWISE17_tree)








                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



                success = True

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            if self._state.backtracking > 0:
                self.memoize(self.input, 5, guard_StartIndex, success)


            pass
        return retval

    # $ANTLR end "guard"


    class where_return(ParserRuleReturnScope):
        def __init__(self):
            super(MirandaParser.where_return, self).__init__()

            self.tree = None





    # $ANTLR start "where"
    # grammars/Miranda.g:136:1: where : WHERE definition ( DEDENT ! definition )* ;
    def where(self, ):
        retval = self.where_return()
        retval.start = self.input.LT(1)

        where_StartIndex = self.input.index()

        root_0 = None

        WHERE18 = None
        DEDENT20 = None
        definition19 = None

        definition21 = None


        WHERE18_tree = None
        DEDENT20_tree = None

        success = False

        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 6):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval


                # grammars/Miranda.g:136:6: ( WHERE definition ( DEDENT ! definition )* )
                # grammars/Miranda.g:136:8: WHERE definition ( DEDENT ! definition )*
                pass 
                root_0 = self._adaptor.nil()


                WHERE18 = self.match(self.input, WHERE, self.FOLLOW_WHERE_in_where818)
                if self._state.backtracking == 0:
                    WHERE18_tree = self._adaptor.createWithPayload(WHERE18)
                    self._adaptor.addChild(root_0, WHERE18_tree)



                self._state.following.append(self.FOLLOW_definition_in_where820)
                definition19 = self.definition()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    self._adaptor.addChild(root_0, definition19.tree)


                # grammars/Miranda.g:136:25: ( DEDENT ! definition )*
                while True: #loop8
                    alt8 = 2
                    LA8_0 = self.input.LA(1)

                    if (LA8_0 == DEDENT) :
                        LA8_1 = self.input.LA(2)

                        if (self.synpred8_Miranda()) :
                            alt8 = 1




                    if alt8 == 1:
                        # grammars/Miranda.g:136:26: DEDENT ! definition
                        pass 
                        DEDENT20 = self.match(self.input, DEDENT, self.FOLLOW_DEDENT_in_where823)

                        self._state.following.append(self.FOLLOW_definition_in_where826)
                        definition21 = self.definition()

                        self._state.following.pop()
                        if self._state.backtracking == 0:
                            self._adaptor.addChild(root_0, definition21.tree)



                    else:
                        break #loop8




                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



                success = True

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            if self._state.backtracking > 0:
                self.memoize(self.input, 6, where_StartIndex, success)


            pass
        return retval

    # $ANTLR end "where"


    class parameter_return(ParserRuleReturnScope):
        def __init__(self):
            super(MirandaParser.parameter_return, self).__init__()

            self.tree = None





    # $ANTLR start "parameter"
    # grammars/Miranda.g:138:1: parameter : basic ( ( COLON | ADD ) ^ parameter )? ;
    def parameter(self, ):
        retval = self.parameter_return()
        retval.start = self.input.LT(1)

        parameter_StartIndex = self.input.index()

        root_0 = None

        set23 = None
        basic22 = None

        parameter24 = None


        set23_tree = None

        success = False

        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 7):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval


                # grammars/Miranda.g:139:3: ( basic ( ( COLON | ADD ) ^ parameter )? )
                # grammars/Miranda.g:139:5: basic ( ( COLON | ADD ) ^ parameter )?
                pass 
                root_0 = self._adaptor.nil()


                self._state.following.append(self.FOLLOW_basic_in_parameter839)
                basic22 = self.basic()
